Add alert rule validation, HATEOAS endpoints, and update docs